<resources>
    <string name="app_name">Budgeting Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="fab_add_expense">Add Expense</string>
    <string name="your_expense">Your_Expense</string>
    <string name="expenses_image">expenses_image</string>
    <string name="expense_amount">Expense_Amount</string>
    <string name="expense_description">Expense_Description</string>
    <string name="expense_date">Expense_Date</string>
    <string name="amount">Amount</string>
    <string name="title">Title</string>
    <string name="add_category">Add Category</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="categories">Categories</string>
    <string name="select_category">Select category</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="add">Add</string>
    <string name="choose_date">Date and Time</string>
    <string name="set">Set</string>


</resources>