<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtBudgetCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="23dp"
        android:contentDescription="@string/expense_date"
        android:text="@string/expense_date"
        app:layout_constraintEnd_toStartOf="@+id/txtBudgetTime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBudgetTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="@string/expense_date"
        android:text="@string/expense_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBudgetAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/expense_amount"
        android:text="@string/expense_amount"
        app:layout_constraintStart_toEndOf="@+id/imgBudget"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBudgetDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/expense_description"
        android:text="@string/expense_description"
        app:layout_constraintStart_toEndOf="@+id/imgBudget"
        app:layout_constraintTop_toBottomOf="@+id/txtBudgetTitle" />

    <TextView
        android:id="@+id/txtBudgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/your_expense"
        android:text="@string/your_expense"
        app:layout_constraintStart_toEndOf="@+id/imgBudget"
        app:layout_constraintTop_toBottomOf="@+id/txtBudgetAmount" />

    <ImageView
        android:id="@+id/imgBudget"
        android:layout_width="58dp"
        android:layout_height="67dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/expenses_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>